--- a/hrhospital/views/hospital_doctor_views.xml
+++ b/hrhospital/views/hospital_doctor_views.xml
@@ -28,7 +28,7 @@
                         <field name="photo"/>
                         <field name="gender"/>
                         <field name="is_intern"/>
-                        <field name="mentor_id"/>
+                        <field name="mentor_id" modifiers="{'readonly': [('is_intern', '=', False)]}"/> <!-- force_save="1" readonly="[('is_intern', '=', False)]"/> -->
                     </group>
                 </sheet>
             </form>
