--- a/hrhospital/views/hospital_schedule_views.xml
+++ b/hrhospital/views/hospital_schedule_views.xml
@@ -7,6 +7,7 @@
         <tree>
           <field name="name"/>
           <field name="doctor_id"/>
+          <field name="patient_id"/>
           <field name="date_from"/>
           <field name="date_to"/>
           <field name="finished"/>
@@ -24,6 +25,7 @@
                     <group>
                         <field name="name"/>
                         <field name="doctor_id"/>
+                        <field name="patient_id"/>
                         <field name="date_from" readonly = "[('finished', '!=', False)]"/>
                         <field name="date_to" readonly = "[('finished', '!=', False)]"/>
                         <field name="finished"/>
