--- a/hrhospital/wizard/set_personal_doctor_wizard_views.xml
+++ b/hrhospital/wizard/set_personal_doctor_wizard_views.xml
@@ -10,30 +10,41 @@
             <field name="doctor_id" options="{'no_create': True}"/>
           </div>
           <footer>
-            <button name="action_set_doctor" string="Set doctor"
-                type="object" icon="fa-plus" class="btn-primary"/>
+            <button name="action_set_doctor"
+                    string="Set doctor"
+                    type="object"
+                    icon="fa-plus"
+                    class="btn-primary"/>
             <button special="cancel" class="oe_link" string="Close"/>
           </footer>
         </form>
       </field>
     </record>
 
-    <record id="server_action_set_personal_doctor_wizard"
-          model="ir.actions.server">
+     <record id="action_set_personal_doctor_wizard" model="ir.actions.act_window">
       <field name="name">Set personal doctor</field>
-      <field name="model_id" ref="model_set_personal_doctor_wizard"/>
-      <field name="state">code</field>
-      <field name="code">
-          action = model.action_open_wizard()
-      </field>
+      <field name="res_model">set.personal.doctor.wizard</field>
+      <field name="view_mode">form</field>
+      <field name="target">new</field>
+      <field name="binding_model_id" ref="model_hospital_patient"/>
+      <field name="binding_view_types">list,form</field>
+      <field name="binding_type">action</field>
     </record>
 
+    <record id="server_action_set_personal_doctor_wizard" model="ir.actions.server">
+        <field name="name">Add Subscribers</field>
+        <field name="model_id" ref="model_set_personal_doctor_wizard"/>
+        <field name="state">code</field>
+        <field name="code">
+            action = model.action_open_wizard()
+        </field>
+    </record>
 
     <record id="menu_set_personal_doctor_wizard" model="ir.ui.menu">
         <field name="name">Set personal doctor</field>
-        <!-- <field name="parent_id" ref="hr_hospital.hospital_settings_main_menu"/> -->
+        <field name="parent_id" ref=""/>
         <field name="action" ref="server_action_set_personal_doctor_wizard"/>
-        <field name="sequence" eval="1000"/>
+        <field name="sequence" eval="100"/>
     </record>
 
 </odoo>
